--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -1,7 +1,8 @@
-name: 'Build'
+name: 'Build Artifacts'
 
 on:
-  - pull_request
+  push:
+    branches: [ 'master' ]
 
 jobs:
     linux:
@@ -12,9 +13,6 @@ jobs:
                   - name: SDL 2
                     flags: '-DREMCPE_PLATFORM=sdl2 -DREMCPE_GFX_API=OGL'
                     packages: 'libsdl2-dev'
-                  - name: SDL 1.2
-                    flags: '-DREMCPE_PLATFORM=sdl1 -DREMCPE_GFX_API=OGL'
-                    packages: 'libsdl1.2-dev'
         name: Linux (${{ matrix.name }})
         runs-on: ubuntu-24.04
         steps:
@@ -35,11 +33,27 @@ jobs:
             run: |
                 mkdir build
                 cd build
-                cmake -GNinja -DWERROR=ON ${{ matrix.flags }} ..
+                cmake -GNinja -DCMAKE_BUILD_TYPE=Release ${{ matrix.flags }} ..
                 cmake --build .
+                cp reminecraftpe reminecraftpe-unstripped
+                strip reminecraftpe
+          - uses: actions/upload-artifact@v6
+            with:
+              name: Linux (${{ matrix.name }})
+              path: |
+                build/reminecraftpe
+                build/reminecraftpe-unstripped
+                build/assets
 
-    wasm:
-        name: WASM
+    linux32:
+        strategy:
+            fail-fast: false
+            matrix:
+                include:
+                  - name: SDL 2
+                    flags: '-DREMCPE_PLATFORM=sdl2 -DREMCPE_GFX_API=OGL'
+                    packages: 'libsdl2-dev:i386'
+        name: Linux 32-bit (${{ matrix.name }})
         runs-on: ubuntu-24.04
         steps:
           - name: Checkout Repository
@@ -48,24 +62,39 @@ jobs:
                 submodules: true
           - name: Install Dependencies
             run: |
+                sudo dpkg --add-architecture i386
                 sudo apt-get update
-                sudo apt-get install --no-install-recommends -y cmake ninja-build
+                sudo apt-get install --no-install-recommends -y \
+                    build-essential \
+                    cmake ninja-build \
+                    gcc-multilib g++-multilib \
+                    libopenal-dev:i386 \
+                    zlib1g-dev:i386 \
+                    ${{ matrix.packages }}
           - name: Build
-            run: ./build-wasm.sh -DWERROR=ON
+            run: |
+                mkdir build
+                cd build
+                cmake -GNinja -DCMAKE_BUILD_TYPE=Release -DCMAKE_C_FLAGS='-m32' -DCMAKE_CXX_FLAGS='-m32' ${{ matrix.flags }} ..
+                cmake --build .
+                cp reminecraftpe reminecraftpe-unstripped
+                strip reminecraftpe
+          - uses: actions/upload-artifact@v6
+            with:
+              name: Linux 32-bit (${{ matrix.name }})
+              path: |
+                build/reminecraftpe
+                build/reminecraftpe-unstripped
+                build/assets
 
     macos:
         strategy:
             fail-fast: false
-            matrix:
+            matrix: # TODO add PPC build
                 include:
                   - name: SDL 2
                     backend_name: 'SDL2'
                     packages: 'libsdl2'
-                  # @NOTE: Uses SDL 1.2 compatibility layer in newer macOS versions, resulting in 30+ minutes spent building
-                  # and installing said layer each time the action is run. We're not doing that.
-                  #- name: SDL 1.2
-                  #  backend_name: 'SDL1'
-                  #  packages: 'libsdl'
         name: macOS (${{ matrix.name }})
         runs-on: macos-15
         steps:
@@ -90,6 +119,14 @@ jobs:
                 GCC_PREPROCESSOR_DEFINITIONS='$(GCC_PREPROCESSOR_DEFINITIONS)' \
                 -quiet \
                 clean archive
+                mv $RUNNER_TEMP/GitHubActions_MacOS_${{ matrix.backend_name }}.xcarchive/Products/usr/local/bin/MinecraftClient.${{ matrix.backend_name }} ../../../../reminecraftpe
+                mv ../../../../game/assets ../../../..
+          - uses: actions/upload-artifact@v6
+            with:
+              name: macOS
+              path: |
+                reminecraftpe
+                assets
 
     ios:
         name: iOS
@@ -118,16 +155,16 @@ jobs:
               AR: llvm-ar-21
               RANLIB: llvm-ranlib-21
               LLVM_CONFIG: llvm-config-21
-              REMCPE_NO_IPA: 1
-              WERROR: ON
+          - uses: actions/upload-artifact@v6
+            with:
+              name: iOS
+              path: platforms/ios/build/ReMCPE.ipa
 
     android:
         strategy:
             fail-fast: false
             matrix:
                 include:
-                  - name: SDL 2
-                    directory: platforms/sdl/sdl2/android
                   - name: Native
                     directory: platforms/android/project
         name: Android (${{ matrix.name }})
@@ -146,7 +183,11 @@ jobs:
           - name: Build
             run: |
                 cd ${{ matrix.directory }}
-                ./gradlew assembleDebug
+                ./gradlew assembleRelease
+          - uses: actions/upload-artifact@v6
+            with:
+              name: Android (${{ matrix.name }})
+              path: platforms/android/project/app/build/outputs/apk/release/app-release-unsigned.apk
 
     mingw:
         strategy:
@@ -154,16 +195,13 @@ jobs:
             matrix:
                 include:
                   - name: Win32 (OGL)
-                    flags: '-DREMCPE_PLATFORM=windows -DREMCPE_GFX_API=OGL'
+                    flags: '-DREMCPE_PLATFORM=windows -DREMCPE_GFX_API=OGL -DCMAKE_TOOLCHAIN_FILE=../cmake/mingw-w64-toolchain.cmake'
                   - name: Win32 (OGL + Shaders)
-                    flags: '-DREMCPE_PLATFORM=windows -DREMCPE_GFX_API=OGL_SHADERS'
-                  - name: Win32 (D3D11)
-                    flags: '-DREMCPE_PLATFORM=windows -DREMCPE_GFX_API=D3D11'
-                  - name: SDL2
-                    flags: "-DREMCPE_PLATFORM=sdl2 -DREMCPE_GFX_API=OGL"
-                  # CMake can't find it
-                  #- name: SDL 1.2
-                  #  flags: '-DREMCPE_PLATFORM=sdl1 -DREMCPE_GFX_API=OGL'
+                    flags: '-DREMCPE_PLATFORM=windows -DREMCPE_GFX_API=OGL_SHADERS -DCMAKE_TOOLCHAIN_FILE=../cmake/mingw-w64-toolchain.cmake'
+                  - name: Win32 (OGL) 32-bit
+                    flags: '-DREMCPE_PLATFORM=windows -DREMCPE_GFX_API=OGL -DCMAKE_TOOLCHAIN_FILE=../cmake/mingw-w64-toolchain-32bit.cmake'
+                  - name: Win32 (OGL + Shaders) 32-bit
+                    flags: '-DREMCPE_PLATFORM=windows -DREMCPE_GFX_API=OGL_SHADERS -DCMAKE_TOOLCHAIN_FILE=../cmake/mingw-w64-toolchain-32bit.cmake'
         name: MinGW-w64 (${{ matrix.name }})
         runs-on: ubuntu-24.04
         steps:
@@ -182,8 +220,16 @@ jobs:
             run: |
                 mkdir build
                 cd build
-                cmake -GNinja -DWERROR=ON -DCMAKE_TOOLCHAIN_FILE=../cmake/mingw-w64-toolchain.cmake ${{ matrix.flags }} ..
+                cmake -GNinja -DCMAKE_BUILD_TYPE=Release ${{ matrix.flags }} ..
                 cmake --build .
+                cp reminecraftpe.exe reminecraftpe-unstripped.exe
+                x86_64-w64-mingw32-strip reminecraftpe.exe
+          - uses: actions/upload-artifact@v6
+            with:
+              name: Windows (${{ matrix.name }})
+              path: |
+                build/reminecraftpe.exe
+                build/assets
 
     switch:
         name: Nintendo Switch
@@ -200,5 +246,12 @@ jobs:
             run: |
                 mkdir build
                 cd build
-                /opt/devkitpro/portlibs/switch/bin/aarch64-none-elf-cmake -GNinja -DWERROR=ON ..
+                /opt/devkitpro/portlibs/switch/bin/aarch64-none-elf-cmake -GNinja -DCMAKE_BUILD_TYPE=Release ..
                 /opt/devkitpro/portlibs/switch/bin/aarch64-none-elf-cmake --build .
+          - uses: actions/upload-artifact@v6
+            with:
+              name: Nintendo Switch
+              path: |
+                build/platforms/sdl/sdl2/reminecraftpe.nro
+                build/reminecraftpe.elf
+                build/assets
