-Added Texture Atlas and gui sprites -Now, the Console logo won't be forced when the Console UI Theme is enabled -Now, the Progress screen will show the actual logo -Removed LCE assets

--- a/game/assets/.gitignore
+++ b/game/assets/.gitignore
@@ -28,6 +28,7 @@
 /gui/startmenu/sm_multi.png
 /gui/startmenu/sm_options.png
 /gui/startmenu/sm_play.png
+/consolegui
 /item/camera.png
 /misc/foliagecolor.png
 /misc/grasscolor.png
