--- a/platforms/windows/projects/World/World.vcxproj
+++ b/platforms/windows/projects/World/World.vcxproj
@@ -212,6 +212,13 @@
     <ClCompile Include="$(MC_ROOT)\source\world\inventory\ChestMenu.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\item\DyeColor.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\item\ToolItem.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\world\inventory\CraftingMenu.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\world\item\crafting\FurnaceRecipes.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\world\item\crafting\Recipes.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\world\item\crafting\ShapedRecipe.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\world\item\crafting\ShapelessRecipe.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\world\item\crafting\SingleInputRecipe.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\world\tile\CraftingTableTile.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="$(MC_ROOT)\source\world\entity\Entity.hpp" />
@@ -369,6 +376,13 @@
     <ClInclude Include="$(MC_ROOT)\source\world\item\DyeColor.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\world\item\Tool.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\world\item\ToolItem.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\world\item\crafting\FurnaceRecipes.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\world\item\crafting\Recipe.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\world\item\crafting\Recipes.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\world\item\crafting\ShapedRecipe.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\world\item\crafting\ShapelessRecipe.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\world\item\crafting\SingleInputRecipe.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\world\tile\CraftingTableTile.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\NBT\NBT.vcxproj">
