--- a/platforms/windows/projects/World/World.vcxproj.filters
+++ b/platforms/windows/projects/World/World.vcxproj.filters
@@ -99,6 +99,12 @@
     <Filter Include="Source Files\Inventory">
       <UniqueIdentifier>{8db2ca8d-8ea6-412f-bea8-fcc1c950d0e6}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\Item\Crafting">
+      <UniqueIdentifier>{ce6cdec2-9993-4cb9-893c-252ac88301e8}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Item\Crafting">
+      <UniqueIdentifier>{3a97a5e5-77e6-43eb-9890-3fa79b287cd1}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="$(MC_ROOT)\source\world\entity\Entity.cpp">
@@ -605,6 +611,27 @@
     <ClCompile Include="$(MC_ROOT)\source\world\item\ToolItem.cpp">
       <Filter>Source Files\Item</Filter>
     </ClCompile>
+    <ClCompile Include="$(MC_ROOT)\source\world\item\crafting\ShapelessRecipe.cpp">
+      <Filter>Source Files\Item\Crafting</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MC_ROOT)\source\world\item\crafting\ShapedRecipe.cpp">
+      <Filter>Source Files\Item\Crafting</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MC_ROOT)\source\world\item\crafting\SingleInputRecipe.cpp">
+      <Filter>Source Files\Item\Crafting</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MC_ROOT)\source\world\item\crafting\Recipes.cpp">
+      <Filter>Source Files\Item\Crafting</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MC_ROOT)\source\world\inventory\CraftingMenu.cpp">
+      <Filter>Source Files\Inventory</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MC_ROOT)\source\world\tile\CraftingTableTile.cpp">
+      <Filter>Source Files\Tile</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MC_ROOT)\source\world\item\crafting\FurnaceRecipes.cpp">
+      <Filter>Source Files\Item\Crafting</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="$(MC_ROOT)\source\world\entity\Entity.hpp">
@@ -1071,6 +1098,27 @@
     </ClInclude>
     <ClInclude Include="$(MC_ROOT)\source\world\item\Tool.hpp">
       <Filter>Header Files\Item</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MC_ROOT)\source\world\item\crafting\Recipe.hpp">
+      <Filter>Header Files\Item\Crafting</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MC_ROOT)\source\world\item\crafting\ShapelessRecipe.hpp">
+      <Filter>Header Files\Item\Crafting</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MC_ROOT)\source\world\item\crafting\SingleInputRecipe.hpp">
+      <Filter>Header Files\Item\Crafting</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MC_ROOT)\source\world\item\crafting\ShapedRecipe.hpp">
+      <Filter>Header Files\Item\Crafting</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MC_ROOT)\source\world\item\crafting\Recipes.hpp">
+      <Filter>Header Files\Item\Crafting</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MC_ROOT)\source\world\tile\CraftingTableTile.hpp">
+      <Filter>Header Files\Tile</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MC_ROOT)\source\world\item\crafting\FurnaceRecipes.hpp">
+      <Filter>Header Files\Item\Crafting</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
