--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -341,6 +341,8 @@ add_library(reminecraftpe-core STATIC
     world/item/RocketItem.cpp
     world/item/Item.cpp
     world/item/ToolItem.cpp
+    world/item/WeaponItem.cpp
+    world/item/BowItem.cpp
     world/item/AuxTileItem.cpp
     world/item/ClothItem.cpp
     world/item/DyeColor.cpp
