--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -38,14 +38,14 @@ jobs:
                 strip reminecraftpe
           - name: Pack release
             run: |
-                mkdir reminecraftpe
-                mv game/assets build/reminecraftpe reminecraftpe
-                tar -czf reminecraftpe-linux-x86_64.tar.gz reminecraftpe
+                mkdir ReMCPE
+                mv game/assets build/reminecraftpe ReMCPE
+                tar -czf ReMCPE-Linux-x86_64.tar.gz ReMCPE
           - uses: alexellis/upload-assets@0.4.1
             env:
               GITHUB_TOKEN: ${{ github.token }}
             with:
-              asset_paths: '["reminecraftpe-linux-x86_64.tar.gz"]'
+              asset_paths: '["ReMCPE-Linux-x86_64.tar.gz"]'
 
     linux32:
         strategy:
@@ -82,14 +82,14 @@ jobs:
                 strip reminecraftpe
           - name: Pack release
             run: |
-                mkdir reminecraftpe
-                mv game/assets build/reminecraftpe reminecraftpe
-                tar -czf reminecraftpe-linux-x86.tar.gz reminecraftpe
+                mkdir ReMCPE
+                mv game/assets build/reminecraftpe ReMCPE
+                tar -czf ReMCPE-Linux-x86.tar.gz ReMCPE
           - uses: alexellis/upload-assets@0.4.1
             env:
               GITHUB_TOKEN: ${{ github.token }}
             with:
-              asset_paths: '["reminecraftpe-linux-x86.tar.gz"]'
+              asset_paths: '["ReMCPE-Linux-x86.tar.gz"]'
 
     macos:
         strategy:
@@ -123,17 +123,17 @@ jobs:
                 GCC_PREPROCESSOR_DEFINITIONS='$(GCC_PREPROCESSOR_DEFINITIONS)' \
                 -quiet \
                 clean archive
-                mkdir ../../../../reminecraftpe
-                mv $RUNNER_TEMP/GitHubActions_MacOS_${{ matrix.backend_name }}.xcarchive/Products/usr/local/bin/MinecraftClient.${{ matrix.backend_name }} ../../../../reminecraftpe
-                strip ../../../../reminecraftpe/reminecraftpe
-                mv ../../../../game/assets ../../../../reminecraftpe
+                mkdir ../../../../ReMCPE
+                mv $RUNNER_TEMP/GitHubActions_MacOS_${{ matrix.backend_name }}.xcarchive/Products/usr/local/bin/MinecraftClient.${{ matrix.backend_name }} ../../../../ReMCPE/reminecraftpe
+                strip ../../../../ReMCPE/reminecraftpe
+                mv ../../../../game/assets ../../../../ReMCPE
           - name: Pack release
-            run: zip -r reminecraftpe-macos.zip reminecraftpe
+            run: zip -r ReMCPE-macOS.zip ReMCPE
           - uses: alexellis/upload-assets@0.4.1
             env:
               GITHUB_TOKEN: ${{ github.token }}
             with:
-              asset_paths: '["reminecraftpe-macos.zip"]'
+              asset_paths: '["ReMCPE-macOS.zip"]'
 
     ios:
         name: iOS
@@ -192,11 +192,13 @@ jobs:
             run: |
                 cd ${{ matrix.directory }}
                 ./gradlew assembleRelease
+                cd $GITHUB_WORKSPACE
+                mv platforms/android/project/app/build/outputs/apk/release/app-release-unsigned.apk ReMCPE.apk
           - uses: alexellis/upload-assets@0.4.1
             env:
               GITHUB_TOKEN: ${{ github.token }}
             with:
-              asset_paths: '["platforms/android/project/app/build/outputs/apk/release/app-release-unsigned.apk"]'
+              asset_paths: '["ReMCPE.apk"]'
 
     mingw:
         strategy:
@@ -232,14 +234,14 @@ jobs:
                 x86_64-w64-mingw32-strip reminecraftpe.exe
           - name: Pack release
             run: |
-                mkdir reminecraftpe
-                mv game/assets build/reminecraftpe.exe reminecraftpe
-                zip -r reminecraftpe-windows-${{ matrix.arch }}.zip reminecraftpe
+                mkdir ReMCPE
+                mv game/assets build/reminecraftpe.exe ReMCPE
+                zip -r ReMCPE-Windows-${{ matrix.arch }}.zip ReMCPE
           - uses: alexellis/upload-assets@0.4.1
             env:
               GITHUB_TOKEN: ${{ github.token }}
             with:
-              asset_paths: '["reminecraftpe-windows-${{ matrix.arch }}.zip"]'
+              asset_paths: '["ReMCPE-Windows-${{ matrix.arch }}.zip"]'
 
     switch:
         name: Nintendo Switch
@@ -260,11 +262,11 @@ jobs:
                 mv platforms/sdl/sdl2/reminecraftpe.nro .
           - name: Pack release
             run: |
-                mkdir reminecraftpe
-                mv game/assets build/reminecraftpe.nro reminecraftpe
-                zip -r reminecraftpe-switch.zip reminecraftpe
+                mkdir ReMCPE
+                mv game/assets build/reminecraftpe.nro ReMCPE
+                zip -r ReMCPE-Switch.zip ReMCPE
           - uses: alexellis/upload-assets@0.4.1
             env:
               GITHUB_TOKEN: ${{ github.token }}
             with:
-              asset_paths: '["reminecraftpe-switch.zip"]'
+              asset_paths: '["ReMCPE-Switch.zip"]'
